--- a/sedutil-cli/autom4te.cache/traces.1
+++ b/sedutil-cli/autom4te.cache/traces.1
@@ -1,3 +1,6 @@
+m4trace:aclocal.m4:679: -1- AC_SUBST([am__quote])
+m4trace:aclocal.m4:679: -1- AC_SUBST_TRACE([am__quote])
+m4trace:aclocal.m4:679: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:5: -1- AC_INIT([sedutil], [1.16.0], [https://github.com/ladar/sedutil/issues])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([_AC_])
@@ -204,6 +207,7 @@ m4trace:configure.ac:11: -1- m4_pattern_allow([^CC$])
 m4trace:configure.ac:11: -1- AC_SUBST([ac_ct_CC])
 m4trace:configure.ac:11: -1- AC_SUBST_TRACE([ac_ct_CC])
 m4trace:configure.ac:11: -1- m4_pattern_allow([^ac_ct_CC$])
+m4trace:configure.ac:11: -1- AC_REQUIRE_AUX_FILE([compile])
 m4trace:configure.ac:16: -1- AH_OUTPUT([HAVE_ARPA_INET_H], [/* Define to 1 if you have the <arpa/inet.h> header file. */
 @%:@undef HAVE_ARPA_INET_H])
 m4trace:configure.ac:16: -1- AH_OUTPUT([HAVE_FCNTL_H], [/* Define to 1 if you have the <fcntl.h> header file. */
@@ -303,7 +307,7 @@ m4trace:configure.ac:27: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MEMSET])
 m4trace:configure.ac:27: -1- m4_pattern_allow([^HAVE_MEMSET$])
 m4trace:configure.ac:30: -1- AM_INIT_AUTOMAKE([-Wall -Werror])
 m4trace:configure.ac:30: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:30: -1- AM_AUTOMAKE_VERSION([1.13.4])
+m4trace:configure.ac:30: -1- AM_AUTOMAKE_VERSION([1.16.1])
 m4trace:configure.ac:30: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:30: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:30: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -391,9 +395,6 @@ m4trace:configure.ac:30: -1- m4_pattern_allow([^DEPDIR$])
 m4trace:configure.ac:30: -1- AC_SUBST([am__include])
 m4trace:configure.ac:30: -1- AC_SUBST_TRACE([am__include])
 m4trace:configure.ac:30: -1- m4_pattern_allow([^am__include$])
-m4trace:configure.ac:30: -1- AC_SUBST([am__quote])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([am__quote])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:30: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
 m4trace:configure.ac:30: -1- AC_SUBST([AMDEP_TRUE])
 m4trace:configure.ac:30: -1- AC_SUBST_TRACE([AMDEP_TRUE])
